= Changelog

To download stable release, please use "switch tags" button and point to the latest release link.

== Head - unstable

* FIX: iphone, ipod, ipad and mac player bug - now audio can be played properly in them. (audio delay is not supported)
* FIX: loading... bug
* FIX: multi-selection on translation text 
* CHANGED: major changes in QuranNavigator javascript class
* CHANGED: major changes in layout javascript class
* NEW: select arabic & native language recitation
* NEW: select arabic & native language Quran text as default 
* NEW: added hr in list and search view
* NEW: word by word mouse over or static word by word feature added

== Release v3.2.0

* FIX: player start bug fix
* NEW: search added
* NEW: small frame layout added for smaller window or embeded quran window

== Release v3.1.2

* NEW: Quran for kids added - to help them learn quran

== Release v3.1.1

* FIX: Quran signs with proper font fize and font family
* FIX: no scroll on language selection
* FIX: tips duplicate fixes
* Fix: tajweed title on list view - if english, then title will be english too.
* CHANGED: langauges into groups by there name
* CHANGED: audio translations by the language name
* CHANGED: word by word mouse over words made it bigger and nicer
* NEW: Tajweed icons and mini guide with warning message about browser font render issue

== Release v3.1.0

* CHANGE: major css id name changes for removing the conflict with other systems

== Release v3.0.2

* NEW: QuranNavigator.js made independent (removed layout requirement from it)
* NEW: QuranNavigator.displayStartup & QuranNavigator.display added for overwriting in your own javascript functions.
* NEW: QuranNavigator.noData added for using the player only - Quran text will not be pulled on navigation value changes (ex: next page, next surah...)
* NEW: QuranNavigator.setup added for making your own custom player with your own function (replace it).
* NEW: added demo folder
* NEW: added audioOnly demo