@@ -210,16 +210,17 @@
 				<a href="#!/ur.junagarhi|quran-tajweed/104:1" data-verse="verseNoHere" class="icon nextSurah tips" data-tips-position="right center">Next Surah</a>
 			</div>
 			<a href="#!/ur.junagarhi|quran-tajweed/1:1" class="icon bismillah" data-verse="1">Bismillah</a>
+			<div class="hr"><hr /></div>
 			<div class="ayahs">
 				<div class="group">
 					<a href="#!/ur.junagarhi|quran-tajweed/103:3" class="ayahNumber" data-verse="6223"><span class="icon leftBracket"></span>٥٣٣<span class="icon rightBracket"> </span></a>
-					<p class="ayah quranText rtl" dir="rtl"><a href="#!/ur.junagarhi/103:3" class="quranID">Urdu</a> بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</p>
+					<p class="ayah quranText rtl" dir="rtl">بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</p>
 					<p class="ayah ltr" dir="ltr"><a href="#!/en.sahihInter/103:3" class="quranID">Sahih International</a> Im suppose to be right to left direction</p>
 				</div>
 				<div class="hr"><hr /></div>
 				<div class="group selected">
 					<a href="#!/ur.junagarhi|quran-tajweed/103:3" class="ayahNumber" data-verse="6223"><span class="icon leftBracket"></span>٥٣٣<span class="icon rightBracket"> </span></a>
-					<p class="ayah quranText rtl" dir="rtl"><a href="#!/ur.junagarhi/103:3" class="quranID">Urdu</a> بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</p>
+					<p class="ayah quranText rtl" dir="rtl">بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</p>
 					<p class="ayah ltr" dir="ltr"><a href="#!/en.sahihInter/103:3" class="quranID">Sahih International</a> Im suppose to be right to left direction</p>
 					<p class="ayah ltr" dir="ltr"><a href="#!/en.sahihInter/103:3" class="quranID">Picktall</a> Im suppose to be right to left direction</p>
 					<p class="ayah ltr" dir="ltr"><a href="#!/en.sahihInter/103:3" class="quranID">Muslim</a> Im suppose to be right to left direction</p>
@@ -227,19 +228,19 @@
 				<div class="hr"><hr /></div>
 				<div class="group">
 					<a href="#!/ur.junagarhi|quran-tajweed/103:3" class="ayahNumber" data-verse="6223"><span class="icon leftBracket"></span>٥٣٣<span class="icon rightBracket"> </span></a>
-					<p class="ayah quranText rtl" dir="rtl"><a href="#!/ur.junagarhi/103:3" class="quranID">Urdu</a> بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</p>
+					<p class="ayah quranText rtl" dir="rtl">بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</p>
 					<p class="ayah ltr" dir="ltr"><a href="#!/en.sahihInter/103:3" class="quranID">Sahih International</a> Im suppose to be right to left direction</p>
 				</div>
 				<div class="hr"><hr /></div>
 				<div class="group">
 					<a href="#!/ur.junagarhi|quran-tajweed/103:3" class="ayahNumber" data-verse="6223"><span class="icon leftBracket"></span>٥٣٣<span class="icon rightBracket"> </span></a>
-					<p class="ayah quranText rtl" dir="rtl"><a href="#!/ur.junagarhi/103:3" class="quranID">Urdu</a> بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</p>
+					<p class="ayah quranText rtl" dir="rtl">بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</p>
 					<p class="ayah ltr" dir="ltr"><a href="#!/en.sahihInter/103:3" class="quranID">Sahih International</a> Im suppose to be right to left direction</p>
 				</div>
 				<div class="hr"><hr /></div>
 				<div class="group">
 					<a href="#!/ur.junagarhi|quran-tajweed/103:3" class="ayahNumber" data-verse="6223"><span class="icon leftBracket"></span>٥٣٣<span class="icon rightBracket"> </span></a>
-					<p class="ayah quranText rtl" dir="rtl"><a href="#!/ur.junagarhi/103:3" class="quranID">Urdu</a> بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</p>
+					<p class="ayah quranText rtl" dir="rtl">بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</p>
 					<p class="ayah ltr" dir="ltr"><a href="#!/en.sahihInter/103:3" class="quranID">Sahih International</a> Im suppose to be right to left direction</p>
 				</div>
 				<div class="hr"><hr /></div>			
